mux-compiler/tests/snapshots/parser_integration__legacy_ast_utils.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Function(
        FunctionNode {
            name: "init",
            type_params: [],
            params: [],
            return_type: TypeNode {
                kind: Primitive(
                    Void,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Literal(
                                            String(
                                                "Utils initialized",
                                            ),
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        None,
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
    Function(
        FunctionNode {
            name: "add",
            type_params: [],
            params: [
                Param {
                    name: "a",
                    type_: TypeNode {
                        kind: Primitive(
                            Int,
                        ),
                        span: Span,
                    },
                    default_value: None,
                },
                Param {
                    name: "b",
                    type_: TypeNode {
                        kind: Primitive(
                            Int,
                        ),
                        span: Span,
                    },
                    default_value: None,
                },
            ],
            return_type: TypeNode {
                kind: Primitive(
                    Int,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Return(
                        Some(
                            ExpressionNode {
                                kind: Binary {
                                    left: ExpressionNode {
                                        kind: Identifier(
                                            "a",
                                        ),
                                        span: Span,
                                    },
                                    op: Add,
                                    op_span: Span,
                                    right: ExpressionNode {
                                        kind: Identifier(
                                            "b",
                                        ),
                                        span: Span,
                                    },
                                },
                                span: Span,
                            },
                        ),
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
    Function(
        FunctionNode {
            name: "multiply",
            type_params: [],
            params: [
                Param {
                    name: "a",
                    type_: TypeNode {
                        kind: Primitive(
                            Int,
                        ),
                        span: Span,
                    },
                    default_value: None,
                },
                Param {
                    name: "b",
                    type_: TypeNode {
                        kind: Primitive(
                            Int,
                        ),
                        span: Span,
                    },
                    default_value: None,
                },
            ],
            return_type: TypeNode {
                kind: Primitive(
                    Int,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Return(
                        Some(
                            ExpressionNode {
                                kind: Binary {
                                    left: ExpressionNode {
                                        kind: Identifier(
                                            "a",
                                        ),
                                        span: Span,
                                    },
                                    op: Multiply,
                                    op_span: Span,
                                    right: ExpressionNode {
                                        kind: Identifier(
                                            "b",
                                        ),
                                        span: Span,
                                    },
                                },
                                span: Span,
                            },
                        ),
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
]
