mux-compiler/tests/snapshots/parser_integration__legacy_ast_variables.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Statement(
        StatementNode {
            kind: ConstDecl(
                "MAX",
                TypeNode {
                    kind: Primitive(
                        Int,
                    ),
                    span: Span,
                },
                ExpressionNode {
                    kind: Literal(
                        Integer(
                            100,
                        ),
                    ),
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: TypedDecl(
                "explicit",
                TypeNode {
                    kind: Primitive(
                        Int,
                    ),
                    span: Span,
                },
                ExpressionNode {
                    kind: Literal(
                        Integer(
                            42,
                        ),
                    ),
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: AutoDecl(
                "inferred",
                TypeNode {
                    kind: Auto,
                    span: Span,
                },
                ExpressionNode {
                    kind: Literal(
                        Float(
                            4.89,
                        ),
                    ),
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: AutoDecl(
                "name",
                TypeNode {
                    kind: Auto,
                    span: Span,
                },
                ExpressionNode {
                    kind: Literal(
                        String(
                            "Mux",
                        ),
                    ),
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: AutoDecl(
                "flag",
                TypeNode {
                    kind: Auto,
                    span: Span,
                },
                ExpressionNode {
                    kind: Literal(
                        Boolean(
                            true,
                        ),
                    ),
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: AutoDecl(
                "otherflag",
                TypeNode {
                    kind: Auto,
                    span: Span,
                },
                ExpressionNode {
                    kind: Literal(
                        Boolean(
                            false,
                        ),
                    ),
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "print",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    String(
                                        "MAX: 100",
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "print",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    String(
                                        "explicit: 42",
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "print",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    String(
                                        "inferred: 4.89",
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "print",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    String(
                                        "name: Mux",
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "print",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    String(
                                        "flag: true",
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "print",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    String(
                                        "otherflag: false",
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: TypedDecl(
                "counter",
                TypeNode {
                    kind: Primitive(
                        Int,
                    ),
                    span: Span,
                },
                ExpressionNode {
                    kind: Literal(
                        Integer(
                            0,
                        ),
                    ),
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "print",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    String(
                                        "counter: 0",
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Unary {
                        op: Incr,
                        op_span: Span,
                        expr: ExpressionNode {
                            kind: Identifier(
                                "counter",
                            ),
                            span: Span,
                        },
                        postfix: true,
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "print",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    String(
                                        "counter: 1",
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Unary {
                        op: Incr,
                        op_span: Span,
                        expr: ExpressionNode {
                            kind: Identifier(
                                "counter",
                            ),
                            span: Span,
                        },
                        postfix: true,
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "print",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    String(
                                        "counter: 2",
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: TypedDecl(
                "countdown",
                TypeNode {
                    kind: Primitive(
                        Int,
                    ),
                    span: Span,
                },
                ExpressionNode {
                    kind: Literal(
                        Integer(
                            5,
                        ),
                    ),
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "print",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    String(
                                        "countdown: 5",
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Unary {
                        op: Decr,
                        op_span: Span,
                        expr: ExpressionNode {
                            kind: Identifier(
                                "countdown",
                            ),
                            span: Span,
                        },
                        postfix: true,
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "print",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    String(
                                        "countdown: 4",
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Unary {
                        op: Decr,
                        op_span: Span,
                        expr: ExpressionNode {
                            kind: Identifier(
                                "countdown",
                            ),
                            span: Span,
                        },
                        postfix: true,
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "print",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    String(
                                        "countdown: 3",
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
]
