mux-compiler/tests/snapshots/parser_integration__legacy_ast_void_lambda_test.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Statement(
        StatementNode {
            kind: AutoDecl(
                "void_lambda",
                TypeNode {
                    kind: Auto,
                    span: Span,
                },
                ExpressionNode {
                    kind: Lambda {
                        params: [],
                        return_type: TypeNode {
                            kind: Primitive(
                                Void,
                            ),
                            span: Span,
                        },
                        body: [
                            StatementNode {
                                kind: Expression(
                                    ExpressionNode {
                                        kind: Call {
                                            func: ExpressionNode {
                                                kind: Identifier(
                                                    "print",
                                                ),
                                                span: Span,
                                            },
                                            args: [
                                                ExpressionNode {
                                                    kind: Literal(
                                                        String(
                                                            "Hello from void lambda",
                                                        ),
                                                    ),
                                                    span: Span,
                                                },
                                            ],
                                        },
                                        span: Span,
                                    },
                                ),
                                span: Span,
                            },
                            StatementNode {
                                kind: Return(
                                    None,
                                ),
                                span: Span,
                            },
                        ],
                        where_clause: None,
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: AutoDecl(
                "void_lambda_with_params",
                TypeNode {
                    kind: Auto,
                    span: Span,
                },
                ExpressionNode {
                    kind: Lambda {
                        params: [
                            Param {
                                name: "message",
                                type_: TypeNode {
                                    kind: Primitive(
                                        Str,
                                    ),
                                    span: Span,
                                },
                                default_value: None,
                            },
                        ],
                        return_type: TypeNode {
                            kind: Primitive(
                                Void,
                            ),
                            span: Span,
                        },
                        body: [
                            StatementNode {
                                kind: Expression(
                                    ExpressionNode {
                                        kind: Call {
                                            func: ExpressionNode {
                                                kind: Identifier(
                                                    "print",
                                                ),
                                                span: Span,
                                            },
                                            args: [
                                                ExpressionNode {
                                                    kind: Binary {
                                                        left: ExpressionNode {
                                                            kind: Literal(
                                                                String(
                                                                    "Message: ",
                                                                ),
                                                            ),
                                                            span: Span,
                                                        },
                                                        op: Add,
                                                        op_span: Span,
                                                        right: ExpressionNode {
                                                            kind: Identifier(
                                                                "message",
                                                            ),
                                                            span: Span,
                                                        },
                                                    },
                                                    span: Span,
                                                },
                                            ],
                                        },
                                        span: Span,
                                    },
                                ),
                                span: Span,
                            },
                            StatementNode {
                                kind: Return(
                                    None,
                                ),
                                span: Span,
                            },
                        ],
                        where_clause: None,
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "void_lambda",
                            ),
                            span: Span,
                        },
                        args: [],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "void_lambda_with_params",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    String(
                                        "Test message",
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: Expression(
                ExpressionNode {
                    kind: Call {
                        func: ExpressionNode {
                            kind: Identifier(
                                "print",
                            ),
                            span: Span,
                        },
                        args: [
                            ExpressionNode {
                                kind: Literal(
                                    String(
                                        "Void lambda test completed",
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                    },
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
]
